# ffi-python

./: Cargo.toml  README.md  main.py  pyproject.toml
ffi/: lib.rs  structs.rs
ffi/example/: __init__.py  _core.pyi
